[gd_scene load_steps=2 format=3 uid="uid://0lwxb477egt3"]

[ext_resource type="Script" uid="uid://btbe278npli4y" path="res://universal components/blinker/blinker.gd" id="1_inkw1"]

[node name="Blinker" type="Node"]
script = ExtResource("1_inkw1")

[node name="BlinkTimer" type="Timer" parent="."]
wait_time = 0.1

[node name="DurationTimer" type="Timer" parent="."]

[connection signal="timeout" from="BlinkTimer" to="." method="_on_blink_timer_timeout"]
[connection signal="timeout" from="DurationTimer" to="." method="_on_duration_timer_timeout"]
